// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`P: Component should render children when passed in 1`] = `
<p
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "18px",
      "fontWeight": 200,
      "lineHeight": "1.33em",
    }
  }
>
  Short paragraph
</p>
`;

exports[`P: Component should render correctly 1`] = `
<p
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "18px",
      "fontWeight": 200,
      "lineHeight": "1.33em",
    }
  }
/>
`;

exports[`P: Component should render with attributes 1`] = `
<p
  id="test-id"
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "18px",
      "fontWeight": 200,
      "lineHeight": "1.33em",
    }
  }
  title="test title"
>
  Paragraph with attributes
</p>
`;

exports[`P: Component should render with custom styles 1`] = `
<p
  style={
    Object {
      "color": "blue",
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "18px",
      "fontWeight": 200,
      "lineHeight": "1.33em",
    }
  }
>
  Paragraph with custom styles
</p>
`;

exports[`P: Component should render with custom theme 1`] = `
<p
  style={
    Object {
      "color": "gray",
      "fontFamily": "serif",
      "fontSize": "18px",
      "lineHeight": "1.33em",
      "size": "100px",
    }
  }
>
  Paragraph with custom theme
</p>
`;
